--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -3,12 +3,33 @@
   src: url('../media/OpenSans-Regular.ttf');
 }
 
+body {
+  margin: 0;
+}
+
 .plugin-wrapper {
+  display: flex;
+  justify-content: center;
+  align-items: center;
   position: relative;
-  width: 667px;
+  max-width: 667px;
   height: 375px;
+}
+
+@media screen and (max-width: 420px) {
+  .plugin-wrapper {
+    width: 100%;
+    height: 30vh;
+  }
+}
+
+.overlay {
+  position: absolute;
   background-color: rgba(0, 0, 0, 0.5);
-  z-index: 99;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
 }
 
 .video {
@@ -19,12 +40,15 @@
   left: 0;
   width: 100%;
   height: 100%;
+  z-index: -1;
 }
 
 .decoration {
   position: absolute;
   top: 50%;
   transform: translate(0, -50%);
+  height: 90%;
+  z-index: 101;
 }
 
 .decoration.left {
@@ -51,6 +75,7 @@
   font-family: 'Open Sans';
   color: white;
   font-size: 16px;
+  z-index: 101;
 }
 
 .timer.left {
@@ -61,10 +86,18 @@
   right: 55px;
 }
 
+.migrate-container {
+  position: relative;
+  width: 75%;
+  height: 100%;
+}
+
 .play-wrapper {
   position: absolute;
   top: 50%;
   left: 50%;
+  width: 100px;
+  height: 100px;
   transform: translate(-50%, -50%);
   cursor: pointer;
   z-index: 100;
